--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,13 +50,16 @@ jobs:
           sed -i 's/DB_USERNAME=.*/DB_USERNAME=polindra/' .env
           sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=polindra/' .env
 
+      - name: Clear config cache
+        run: php artisan config:clear
+
       - name: Generate app key
         run: php artisan key:generate
 
       - name: Wait for MySQL to be ready
         run: |
           for i in {1..10}; do
-            if mysqladmin ping -h 127.0.0.1 -u polindra -ppolindra --silent; then
+            if mysqladmin ping -h 127.0.0.1 -u polindra -polindra --silent; then
               echo "MySQL is ready!"
               break
             fi
