--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  laravel-d4rpl2b-kelompok4:
+  build-test:
     runs-on: ubuntu-latest
-
     services:
       mysql:
         image: mysql:8.0
@@ -21,116 +20,124 @@ jobs:
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -uroot -proot"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=10
+          --health-cmd "mysqladmin ping -p$$MYSQL_ROOT_PASSWORD"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.3'
-          extensions: mbstring, ctype, fileinfo, openssl, pdo, tokenizer, xml, mysql, pdo_mysql
-          coverage: none
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.3'
+        extensions: mbstring, ctype, fileinfo, openssl, PDO, tokenizer, xml, mysql, pdo_mysql
+        coverage: none
 
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-interaction --no-progress
+    - name: Install dependencies
+      run: |
+        composer install --prefer-dist --no-interaction --no-progress
 
-      - name: Configure .env
-        run: |
-          cp .env.example .env
-          sed -i 's/DB_CONNECTION=.*/DB_CONNECTION=mysql/' .env
-          sed -i 's/DB_HOST=.*/DB_HOST=127.0.0.1/' .env
-          sed -i 's/DB_PORT=.*/DB_PORT=3306/' .env
-          sed -i 's/DB_DATABASE=.*/DB_DATABASE=laracicd/' .env
-          sed -i 's/DB_USERNAME=.*/DB_USERNAME=polindra/' .env
-          sed -i 's/DB_PASSWORD=.*/DB_PASSWORD=polindra/' .env
+    - name: Configure MySQL
+      run: |
+        cp .env.example .env
+        sed -i 's/DB_CONNECTION=mysql/DB_CONNECTION=mysql/' .env
+        sed -i 's/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/' .env
+        sed -i 's/DB_PORT=3306/DB_PORT=3306/' .env
+        sed -i 's/DB_DATABASE=laravel/DB_DATABASE=laracicd/' .env
+        sed -i 's/DB_USERNAME=root/DB_USERNAME=polindra/' .env
+        sed -i 's/DB_PASSWORD=/DB_PASSWORD=polindra/' .env
 
-      - name: Clear config cache
-        run: php artisan config:clear
+    - name: Generate app key
+      run: php artisan key:generate
 
-      - name: Generate app key
-        run: php artisan key:generate
+    - name: Wait for MySQL to be ready
+      run: |
+        for i in {1..10}; do
+          if mysqladmin ping -h 127.0.0.1 -u polindra -p polindra --silent; then
+            echo "MySQL is ready!"
+            break
+          fi
+          echo "Waiting for MySQL... Attempt $i/10"
+          sleep 3
+        done
 
-      - name: Wait for MySQL to be ready
-        run: |
-          for i in {1..10}; do
-            if mysqladmin ping -h 127.0.0.1 -u polindra -polindra --silent; then
-              echo "MySQL is ready!"
-              break
-            fi
-            echo "Waiting for MySQL... Attempt $i/10"
-            sleep 5
-          done
+    - name: Run database migrations and seed
+      run: php artisan migrate:fresh --seed
 
-      - name: Run migrations and seed
-        run: php artisan migrate:fresh --seed
+    - name: Execute tests
+      run: php artisan test
 
-      - name: Run tests
-        run: php artisan test
-
-      - name: Upload artifact for deployment
-        uses: actions/upload-artifact@v4
-        with:
-          name: laravel-app
-          path: |
-            .
-            !.github/
-            !.git/
-            !node_modules/
-            !vendor/
-            !storage/debugbar/
-          retention-days: 1
+    - name: Upload artifact for deployment
+      uses: actions/upload-artifact@v4
+      with:
+        name: laravel-app
+        path: |
+          .
+          !.github/
+          !.git/
+          !node_modules/
+          !vendor/
+          !storage/debugbar/
+        retention-days: 1
 
   deploy:
-    needs: laravel-d4rpl2b-kelompok4
+    needs: build-test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: laravel-app
-          path: ./deploy
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: laravel-app
+        path: ./deploy
 
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
-          port: 22
+    - name: Install SSH key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        known_hosts: ${{ secrets.KNOWN_HOSTS }}
+        port: 64000
 
-      - name: Deploy to server via SCP/SSH
-        run: |
-          ssh -o StrictHostKeyChecking=no -p 22 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "mkdir -p ~/laravel-d4rpl2b-kelompok4"
+    - name: Deploy to server via SCP/SSH
+      run: |
+        # Buat direktori sementara di server
+        ssh -o StrictHostKeyChecking=no -p 64000 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "mkdir -p ~/laravel-temp-deploy"
 
-          scp -o StrictHostKeyChecking=no -P 22 -r ./deploy/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/laravel-d4rpl2b-kelompok4/
+        # Upload files ke server
+        scp -o StrictHostKeyChecking=no -P 64000 -r ./deploy/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:~/laravel-temp-deploy/
 
-          ssh -o StrictHostKeyChecking=no -p 22 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-            cd ~/laravel-d4rpl2b-kelompok4
+        # Jalankan deployment script di server
+        ssh -o StrictHostKeyChecking=no -p 64000 ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
+          cd ~/laravel-temp-deploy
 
-            sudo rsync -avz --delete \
-              --exclude='.env' \
-              --exclude='storage' \
-              --exclude='.git' \
-              --exclude='.github' \
-              ~/laravel-d4rpl2b-kelompok4/ /var/www/laravel-d4rpl2b-kelompok4/
+          # Backup existing deployment (optional)
+          # tar -czf /backup/laravel-backup-$(date +"%Y%m%d%H%M%S").tar.gz /var/www/laravel-d4rpl2b-kelompok4
 
-            sudo chown -R www-data:www-data /var/www/laravel-d4rpl2b-kelompok4
-            sudo chmod -R 755 /var/www/laravel-d4rpl2b-kelompok4/storage
-            sudo chmod -R 755 /var/www/laravel-d4rpl2b-kelompok4/bootstrap/cache
+          # Copy files to production directory
+          sudo rsync -avz --delete \
+            --exclude='.env' \
+            --exclude='storage' \
+            --exclude='.git' \
+            --exclude='.github' \
+            ~/laravel-temp-deploy/ /var/www/laravel-d4rpl2b-kelompok4/
 
-            cd /var/www/laravel-d4rpl2b-kelompok4
-            sudo -u www-data composer install --optimize-autoloader --no-dev
-            sudo -u www-data php artisan config:cache
-            sudo -u www-data php artisan route:cache
-            sudo -u www-data php artisan view:cache
-            sudo -u www-data php artisan migrate --force
+          # Set permissions
+          sudo chown -R www-data:www-data /var/www/laravel-d4rpl2b-kelompok4
+          sudo chmod -R 755 /var/www/laravel-d4rpl2b-kelompok4/storage
+          sudo chmod -R 755 /var/www/laravel-d4rpl2b-kelompok4/bootstrap/cache
 
-            rm -rf ~/laravel-d4rpl2b-kelompok4
-          EOF
+          # Run deployment commands
+          cd /var/www/laravel-d4rpl2b-kelompok4
+          sudo -u www-data composer install --optimize-autoloader --no-dev
+          sudo -u www-data php artisan config:cache
+          sudo -u www-data php artisan route:cache
+          sudo -u www-data php artisan view:cache
+          sudo -u www-data php artisan migrate --force
+
+          # Cleanup
+          rm -rf ~/laravel-temp-deploy
+        EOF
